# Personal-Harness

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  RULES.md  TODO-strictness-sweep.md  bootstrap.sh  docker-compose.yml  install.sh  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
.betterai/: README.md
.githooks/: post-commit  pre-commit
BetterAI-Python/backend/: .env.example
app/: audit.py  cli.py  deps.py  doctor.py  errors.py  main.py  mcp_client.py  openrouter.py  server.py  settings.py
app/api/: routes.py
app/corpus/: reader.py  schema.py  writer.py
app/evals/: __init__.py  arms.py  judge.py  report.py  rubric.py  runner.py  smoke.py
app/hooks/: chain.py  events.py  plan_cache.py  routes.py  state.py
app/ingest/: __init__.py  chunk.py  distill.py  extract.py  fetch.py  pipeline.py
app/installer/: adapters.py  compose.py  hooks_scripts.py  install_env.py  instructions.py  memory_provider.py
app/mcp/: registry.py
app/retrieval/: __init__.py  expand.py  ingest.py  search.py
app/sync/: __init__.py  skills.py
app/ui/: local_api.py  server.py
docs/: AUTHORING.md  DEBUGGING.md  EVAL-HARNESS.md  HANDOFF.md  IMPLEMENTATION-ROADMAP.html  RELIABILITY-TEST-GAPS.md
docs/components/: audit.html  auth.html  cache.html  cli.html  corpus.html  index.html  install.html  mcp-tools.html  retrieve.html  scope.html  transport.html
docs/design/: v4-design.md  v4.1-scoping-extension.md
eval-output/: README.md
scripts/: update-component-docs.mjs
src/: app.ts  index.ts
tests/: conftest.py
(+286 files in other folders)
