[project]
name = "betterai"
version = "0.4.0"
description = "BetterAI harness: MCP server injecting corpus skills/rules into coding agents with hybrid RAG and hard gates"
requires-python = ">=3.12"
# Pins per docs/proposals/engine-components.md (P0-R2, verified 2026-07-06).
dependencies = [
    "fastmcp>=3.4,<4",
    "redisvl>=0.23,<0.24",
    "redis>=7.1",
    "openai>=1.40",
    "psycopg[binary,pool]>=3.3,<4",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "typer>=0.12",
    "uvicorn>=0.30",
    "starlette>=0.37",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23"]

[project.scripts]
betterai = "app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: needs live redis/postgres",
    "e2e: needs running server",
]
